@startuml
' Utilisation de skinparam pour améliorer l'apparence
skinparam linetype ortho
skinparam backgroundColor white
skinparam roundcorner 15

' Énumérations
enum Difficulty {
  EASY
  MEDIUM
  HARD
}

enum TrickType {
  GRABS
  SPINS
  FLIPS
  SLIDES_GRINDS
  BUTTER_TRICKS
  ONE_FOOT_TRICKS
  FREESTYLE_AERIAL_TRICKS
}

' Entités
entity User {
  *id : int <<PK>>
  *username : varchar
  *email : varchar
  *password : varchar
  *createdAt : datetime
  isVerified : boolean
  verificationToken : varchar
  image : varchar
}

entity Trick {
  *id : int <<PK>>
  *name : varchar
  *slug : varchar
  *description : text
  *difficulty : Difficulty <<FK>>
  *trickType : TrickType <<FK>>
  *createdAt : datetime
  updatedAt : datetime
  *user_id : int <<FK>>
}

entity Image {
  *id : int <<PK>>
  *url : varchar
  isFeatured : boolean
  *createdAt : datetime
  updatedAt : datetime
  imageFile : File
  *trick_id : int <<FK>>
}

entity Video {
  *id : int <<PK>>
  *url : varchar
  *createdAt : datetime
  *trick_id : int <<FK>>
}

entity Comment {
  *id : int <<PK>>
  *content : text
  *createdAt : datetime
  user_id : int <<FK>>
  *trick_id : int <<FK>>
}

' Relations
User ||--o{ Trick : crée
User ||--o{ Comment : écrit
Trick ||--o{ Image : contient
Trick ||--o{ Video : contient
Trick ||--o{ Comment : reçoit
Trick }|--|| Difficulty : a comme difficulté
Trick }|--|| TrickType : a comme type

' Notes explicatives
note bottom of Image
  L'attribut imageFile est utilisé 
  pour l'upload de fichiers mais 
  n'est pas stocké en base
end note

note bottom of Video
  L'URL est formatée automatiquement 
  avant la persistance pour extraire 
  l'identifiant de la vidéo
end note

note bottom of User
  Un utilisateur peut être supprimé 
  sans supprimer ses tricks ou commentaires
end note

note bottom of Trick
  La suppression d'un trick entraîne 
  la suppression de ses images, vidéos 
  et commentaires (CASCADE)
end note
@enduml
